2014-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGridTool.h:
	* X3DGridTool.cpp: 

2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformTool.x3dv:
	* X3DGridTool.cpp: 

2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.cpp:
	* TransformTool.x3dv:
	* X3DGridTool.cpp:
	* X3DGeometryNode.cpp: 

2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGridTool.cpp: 

2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.h:
	* AngleTool.h:
	* GridTool.cpp:
	* X3DGridTool.h:
	* AngleTool.cpp:
	* X3DGridTool.cpp: 

2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGridTool.cpp:
	* X3DTransformNodeTool.h: 

2014-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformTool.x3dv:
	* X3DGridTool.cpp: 

2014-11-04  Holger Seelig  <holger.seelig@yahoo.de>

	* SFMatrix4.h:
	* TransformTool.x3dv:
	* X3DGridTool.cpp:
	* X3DGeometryNode.cpp:
	* jsSFMatrix4.h: 

2014-11-03  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGridTool.h:
	* X3DGridTool.cpp: 

2014-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoElevationGrid.h:
	* GeoElevationGrid.cpp: 

2014-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* GeoElevationGrid.h:
	* GeoElevationGrid.cpp: 

2014-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* ElevationGrid.h:
	* ElevationGrid.cpp: 

2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* QuadSet.h:
	* QuadSet.cpp:
	* TriangleSet.h:
	* TriangleSet.cpp:
	* TriangleFanSet.h:
	* IndexedFaceSet.h:
	* IndexedQuadSet.h:
	* TriangleStripSet.h:
	* TriangleFanSet.cpp:
	* IndexedFaceSet.cpp:
	* IndexedTriangleSet.h:
	* IndexedQuadSet.cpp:
	* TriangleStripSet.cpp:
	* IndexedTriangleSet.cpp:
	* IndexedTriangleFanSet.h:
	* IndexedTriangleStripSet.h:
	* X3DComposedGeometryNode.h:
	* IndexedTriangleFanSet.cpp:
	* IndexedTriangleStripSet.cpp:
	* X3DComposedGeometryNode.cpp: 

2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp: 
