@@ -3,6 +3,11 @@
 	* X3DGridTool.h:
 	* X3DGridTool.cpp: 
 
+2014-11-06  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DGridTool.h:
+	* X3DGridTool.cpp: 
+
 2014-11-05  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* TransformTool.x3dv:
